# Student-Academic-Support-AI-chatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: student.ipynb  students.csv
src/: app.py  helpers.py
